# dm

./: .env  .gitignore  README.md  alembic.ini  dbdiagram.dbml  pyproject.toml  start.bat
alembic/versions/: 3f8d7a1c9b2e_add_chat_message_attachments.py  66dacbad7cef_initial_tables.py  7a91d4f0c3b6_add_product_deleted_flag.py  9c2e124f0e5f_add_sales_categories_and_chats.py  a42c6d9e8f10_add_archives_and_order_snapshots.py
app/: main.py
app/api/: __init__.py  admin.py  auth.py  categories.py  chats.py  dependencies.py  favorites.py  health.py  orders.py  products.py  reviews.py  seller.py  uploads.py  users.py
app/core/: config.py  database.py  security.py
app/models/: __init__.py  category.py  chat.py  digital_item.py  favorite.py  order.py  product.py  review.py  user.py
app/schemas/: __init__.py  admin.py  category.py  chat.py  digital_item.py  favorite.py  order.py  product.py  review.py  user.py
app/services/: __init__.py  admin_stats.py  categories.py  chats.py  digital_items.py  favorites.py  orders.py  products.py  reviews.py  users.py
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: Navigation.tsx
frontend/src/hooks/: useAuth.tsx
frontend/src/lib/: api.ts  cart.ts  favorites.ts  productImages.ts  uploads.ts
frontend/src/pages/: AdminPage.tsx  CartPage.tsx  ChatsPage.tsx  FavoritesPage.tsx  HomePage.tsx  LoginPage.tsx  ProductPage.tsx  ProfilePage.tsx  PurchasesPage.tsx  RegisterPage.tsx  SearchPage.tsx  SellerPage.tsx
scripts/: seed.py
(+1 files in other folders)
